# AgenticAi

./: pyproject.toml
AgenticLanggraph/: .env  pyproject.toml  requirements.txt
AgenticLanggraph/1-Basic Chatbot/: 1-basicchatbot.ipynb  2.mcp server.ipynb
Langgraph/: pyproject.toml  requirements.txt
RAG-Implementation/: main.py  pyproject.toml
RAG-Implementation/data/text_files/: machine_learning.txt  python_intro.txt
RAG-Implementation/notebook/: document.ipynb  pdf_loader.ipynb
langchain/: 1-langchainintro.ipynb
mcpdemolangchain/: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
